--- a/build.gradle
+++ b/build.gradle
@@ -80,3 +80,9 @@ processResources
         exclude 'mcmod.info'
     }
 }
+
+jar {
+    manifest {
+        attributes 'FMLAT': 'featurehelper_at.cfg'
+    }
+}
