--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,10 @@ processResources
     }
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
 jar {
     manifest {
         attributes 'FMLAT': 'featurehelper_at.cfg'
