--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,4 @@
 public net.minecraft.world.gen.feature.structure.OceanMonumentPieces$RoomDefinition
 public net.minecraft.world.gen.feature.structure.OceanMonumentPieces$MonumentBuilding field_175843_q # childPieces
+
+public net.minecraft.world.chunk.Chunk field_76634_f # heightMap
